# mrcepid-buildgrms

./: .gitignore  Readme.md  dxapp.json  pyproject.toml
build_grms/: build_grms.py
buildgrms/: build_grms.py  buildgrms.py
buildgrms/grm_tools/: grm_toolkit.py
resources/: scratch.txt
src/: mrcepid-buildgrms.py
test/: test_buildgrms.py
